# aura

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
app/: agno_agent.py  schemas.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: agno_agent.py  config.py  main.py
frontend/src/app/: page.tsx
frontend/src/app/api/chat/: route.ts
