[project]
name = "ai-app-backend"
version = "0.1.0"
description = "FastAPI backend for an AI-enabled application."
requires-python = ">=3.12"
dependencies = [
  "agno[openai]",
  "fastapi",
  "pydantic-settings",
  "python-dotenv",
  "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
